--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-opencv-python>=4.5.0
-numpy>=1.19.0
-Pillow>=8.0.0
+Flask==3.0.0
+opencv-python-headless==4.8.1.78
+numpy==1.26.0
+Pillow==10.1.0
+gunicorn==21.2.0
